[gd_scene load_steps=105 format=3 uid="uid://cx3u5428uy3ha"]

[ext_resource type="Script" path="res://Scripts/ground items/wood_tree.gd" id="1_5um34"]
[ext_resource type="Texture2D" uid="uid://cp1ypiqurplgw" path="res://Art/tree_shadow.png" id="3_tecyf"]
[ext_resource type="Texture2D" uid="uid://dd0h1yimmuys0" path="res://Art/tree_2_shadow.png" id="4_0nytx"]
[ext_resource type="Texture2D" uid="uid://diytspr2oilon" path="res://Art/tree.png" id="6_p1t60"]
[ext_resource type="Texture2D" uid="uid://2ibnwdkhtb1c" path="res://Art/tree_2.png" id="7_hh2gj"]
[ext_resource type="Script" path="res://Scripts/tweens/tween_shake.gd" id="8_hx8ta"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qxhk0"]
size = Vector2(14, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmptk"]
atlas = ExtResource("3_tecyf")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0uxo"]
atlas = ExtResource("3_tecyf")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxbp6"]
atlas = ExtResource("3_tecyf")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qjmg"]
atlas = ExtResource("3_tecyf")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_61oq1"]
atlas = ExtResource("3_tecyf")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcntq"]
atlas = ExtResource("3_tecyf")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5spq"]
atlas = ExtResource("3_tecyf")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rw7wj"]
atlas = ExtResource("3_tecyf")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkxtp"]
atlas = ExtResource("3_tecyf")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhq5r"]
atlas = ExtResource("3_tecyf")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8men"]
atlas = ExtResource("3_tecyf")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4xwc"]
atlas = ExtResource("3_tecyf")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fik2"]
atlas = ExtResource("3_tecyf")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_po2v8"]
atlas = ExtResource("3_tecyf")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_od1v4"]
atlas = ExtResource("3_tecyf")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmci8"]
atlas = ExtResource("3_tecyf")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsn1g"]
atlas = ExtResource("3_tecyf")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4uevc"]
atlas = ExtResource("3_tecyf")
region = Rect2(240, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmsul"]
atlas = ExtResource("3_tecyf")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijsv5"]
atlas = ExtResource("3_tecyf")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nkh1"]
atlas = ExtResource("3_tecyf")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xdec"]
atlas = ExtResource("3_tecyf")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsln8"]
atlas = ExtResource("3_tecyf")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0do5b"]
atlas = ExtResource("3_tecyf")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yuam"]
atlas = ExtResource("3_tecyf")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_efnfj"]
atlas = ExtResource("3_tecyf")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3r70"]
atlas = ExtResource("3_tecyf")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4f83"]
atlas = ExtResource("3_tecyf")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_78dbb"]
atlas = ExtResource("3_tecyf")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bc62"]
atlas = ExtResource("3_tecyf")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_di23u"]
atlas = ExtResource("4_0nytx")
region = Rect2(0, 0, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1crr"]
atlas = ExtResource("4_0nytx")
region = Rect2(72, 0, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hycy"]
atlas = ExtResource("4_0nytx")
region = Rect2(144, 0, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oipss"]
atlas = ExtResource("4_0nytx")
region = Rect2(216, 0, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vc4u"]
atlas = ExtResource("4_0nytx")
region = Rect2(0, 48, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltg6w"]
atlas = ExtResource("4_0nytx")
region = Rect2(72, 48, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hc0y3"]
atlas = ExtResource("4_0nytx")
region = Rect2(144, 48, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2udy5"]
atlas = ExtResource("4_0nytx")
region = Rect2(216, 48, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwt5f"]
atlas = ExtResource("4_0nytx")
region = Rect2(0, 96, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lt3xv"]
atlas = ExtResource("4_0nytx")
region = Rect2(72, 96, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0uur"]
atlas = ExtResource("4_0nytx")
region = Rect2(144, 96, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuoyl"]
atlas = ExtResource("4_0nytx")
region = Rect2(216, 96, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1nrf"]
atlas = ExtResource("4_0nytx")
region = Rect2(0, 144, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ku0p"]
atlas = ExtResource("4_0nytx")
region = Rect2(72, 144, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6wu8"]
atlas = ExtResource("4_0nytx")
region = Rect2(144, 144, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w138v"]
atlas = ExtResource("4_0nytx")
region = Rect2(216, 144, 72, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_uxi4a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmptk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0uxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxbp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qjmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61oq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcntq")
}],
"loop": false,
"name": &"stump_0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5spq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw7wj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkxtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhq5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8men")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4xwc")
}],
"loop": false,
"name": &"stump_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fik2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po2v8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_od1v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmci8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsn1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4uevc")
}],
"loop": false,
"name": &"stump_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmsul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijsv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nkh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xdec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsln8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0do5b")
}],
"loop": false,
"name": &"tree_0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yuam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efnfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3r70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4f83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78dbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bc62")
}],
"loop": false,
"name": &"tree_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_di23u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1crr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hycy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oipss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vc4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltg6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hc0y3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2udy5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwt5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt3xv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0uur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuoyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1nrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ku0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6wu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w138v")
}],
"loop": false,
"name": &"tree_2",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_6aex6"]
atlas = ExtResource("6_p1t60")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_65nom"]
atlas = ExtResource("6_p1t60")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vi5i"]
atlas = ExtResource("6_p1t60")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1q7q"]
atlas = ExtResource("6_p1t60")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5ypc"]
atlas = ExtResource("6_p1t60")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1x32"]
atlas = ExtResource("6_p1t60")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5j1ee"]
atlas = ExtResource("6_p1t60")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nniw"]
atlas = ExtResource("6_p1t60")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3vh3"]
atlas = ExtResource("6_p1t60")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3u5b1"]
atlas = ExtResource("6_p1t60")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nl1cr"]
atlas = ExtResource("6_p1t60")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rwlh"]
atlas = ExtResource("6_p1t60")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jd4w"]
atlas = ExtResource("6_p1t60")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_33mbc"]
atlas = ExtResource("6_p1t60")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t12jk"]
atlas = ExtResource("6_p1t60")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhwd3"]
atlas = ExtResource("6_p1t60")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0veqn"]
atlas = ExtResource("6_p1t60")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1k3h3"]
atlas = ExtResource("6_p1t60")
region = Rect2(240, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iljyo"]
atlas = ExtResource("6_p1t60")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_31no7"]
atlas = ExtResource("6_p1t60")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv83l"]
atlas = ExtResource("6_p1t60")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vblup"]
atlas = ExtResource("6_p1t60")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_avwps"]
atlas = ExtResource("6_p1t60")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uydgn"]
atlas = ExtResource("6_p1t60")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xs7xf"]
atlas = ExtResource("7_hh2gj")
region = Rect2(0, 0, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rky2n"]
atlas = ExtResource("7_hh2gj")
region = Rect2(72, 0, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nw56e"]
atlas = ExtResource("7_hh2gj")
region = Rect2(144, 0, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya7qc"]
atlas = ExtResource("7_hh2gj")
region = Rect2(216, 0, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf48x"]
atlas = ExtResource("7_hh2gj")
region = Rect2(0, 48, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdoww"]
atlas = ExtResource("7_hh2gj")
region = Rect2(72, 48, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4k3tl"]
atlas = ExtResource("7_hh2gj")
region = Rect2(144, 48, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_up5x0"]
atlas = ExtResource("7_hh2gj")
region = Rect2(216, 48, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0eey"]
atlas = ExtResource("7_hh2gj")
region = Rect2(0, 96, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruu64"]
atlas = ExtResource("7_hh2gj")
region = Rect2(72, 96, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ndox"]
atlas = ExtResource("7_hh2gj")
region = Rect2(144, 96, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3b0ls"]
atlas = ExtResource("7_hh2gj")
region = Rect2(216, 96, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_att3o"]
atlas = ExtResource("7_hh2gj")
region = Rect2(0, 144, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvh80"]
atlas = ExtResource("7_hh2gj")
region = Rect2(72, 144, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hetvr"]
atlas = ExtResource("7_hh2gj")
region = Rect2(144, 144, 72, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_higyx"]
atlas = ExtResource("7_hh2gj")
region = Rect2(216, 144, 72, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_rl446"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6aex6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65nom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vi5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1q7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5ypc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1x32")
}],
"loop": false,
"name": &"stump_0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5j1ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nniw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3vh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3u5b1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl1cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rwlh")
}],
"loop": false,
"name": &"stump_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jd4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33mbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t12jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhwd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0veqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1k3h3")
}],
"loop": false,
"name": &"stump_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iljyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31no7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv83l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vblup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avwps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uydgn")
}],
"loop": false,
"name": &"tree_0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs7xf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rky2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nw56e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya7qc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf48x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdoww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k3tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_up5x0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0eey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruu64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ndox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b0ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_att3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvh80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hetvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_higyx")
}],
"loop": false,
"name": &"tree_2",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_w1uq8"]
atlas = ExtResource("6_p1t60")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v04cj"]
atlas = ExtResource("6_p1t60")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3k07"]
atlas = ExtResource("6_p1t60")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk6dh"]
atlas = ExtResource("6_p1t60")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvghr"]
atlas = ExtResource("6_p1t60")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jqfg"]
atlas = ExtResource("6_p1t60")
region = Rect2(240, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_5j45q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6aex6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65nom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vi5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1q7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5ypc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1x32")
}],
"loop": false,
"name": &"stump_0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5j1ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nniw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3vh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3u5b1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl1cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rwlh")
}],
"loop": false,
"name": &"stump_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jd4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33mbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t12jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhwd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0veqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1k3h3")
}],
"loop": false,
"name": &"stump_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iljyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31no7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv83l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vblup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avwps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uydgn")
}],
"loop": false,
"name": &"tree_0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1uq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v04cj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3k07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk6dh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvghr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jqfg")
}],
"loop": false,
"name": &"tree_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs7xf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rky2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nw56e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya7qc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf48x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdoww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k3tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_up5x0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0eey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruu64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ndox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b0ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_att3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvh80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hetvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_higyx")
}],
"loop": false,
"name": &"tree_2",
"speed": 5.0
}]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_r2gf4"]
polygon = PackedVector2Array(0, 0, 3, 0, 6, 4, 6, 7, 4, 9, 0, 9, -3, 9, -5, 7, -5, 4, -3, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_852ub"]
radius = 12.0

[node name="WoodTree" type="Area2D"]
script = ExtResource("1_5um34")
stop_threshold = 0.1
subtween_duration = 0.03
recovery_factor = 0.4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_qxhk0")

[node name="ShadowAnimatedSprite" type="AnimatedSprite2D" parent="."]
z_index = 9
z_as_relative = false
sprite_frames = SubResource("SpriteFrames_uxi4a")
animation = &"stump_0"

[node name="StumpAnimatedSprite" type="AnimatedSprite2D" parent="."]
z_index = 10
z_as_relative = false
sprite_frames = SubResource("SpriteFrames_rl446")
animation = &"stump_0"

[node name="MainAnimatedSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
z_index = 10
z_as_relative = false
sprite_frames = SubResource("SpriteFrames_5j45q")
animation = &"tree_1"

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2(0, -4)
occluder = SubResource("OccluderPolygon2D_r2gf4")

[node name="HitSFXPlayer" type="AudioStreamPlayer" parent="."]

[node name="BreakSFXPlayer" type="AudioStreamPlayer" parent="."]

[node name="ShakeTween" type="Node2D" parent="."]
script = ExtResource("8_hx8ta")
x_max = 1
r_max = 5

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(16, 16)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.462745)

[node name="InvisibilityTrigger" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InvisibilityTrigger"]
position = Vector2(0, -18)
shape = SubResource("CircleShape2D_852ub")

[node name="PhysicsCollider" type="StaticBody2D" parent="."]
z_index = 10
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PhysicsCollider"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_qxhk0")

[connection signal="body_entered" from="InvisibilityTrigger" to="." method="_on_invisibility_trigger_body_entered"]
[connection signal="body_exited" from="InvisibilityTrigger" to="." method="_on_invisibility_trigger_body_exited"]
